# auth_service

./: Makefile  README.md  docker-compose.yaml  pyproject.toml  useful_info.md
auth/: .dockerignore  Dockerfile  app.py  entrypoint.sh  requirements.txt
auth/src/: cli_commands.py  utils.py
auth/src/api/v1/: __init__.py  auth.py  oauth.py  roles.py  user.py  utils.py
auth/src/core/: __init__.py  config.py  errors.py  logger.py
auth/src/db/: __init__.py  alembic.ini  connection.py
auth/src/services/: auth.py  db_manager.py  limiter.py  models.py  oauth_service.py  roles.py  user.py
backend/: Dockerfile  entrypoint.sh  main.py  requirements-dev.txt  requirements.txt
backend/api/v1/: film_models.py  films.py  genre_models.py  genres.py  person_models.py  persons.py  utils.py
backend/core/: __init__.py  config.py  logger.py
backend/db/: abstract_cache_storage.py  abstract_search_engine.py
backend/models/: base.py  film.py  genre.py  person.py
backend/services/: film.py  genre.py  mixins.py  person.py  queries_list.py
docs/: README.md
etl/: README.md  index_scheme_filmwork.json  index_scheme_genre.json  index_scheme_person.json
etl/src/: Dockerfile  config.py  entrypoint.sh  main.py  requirements.txt  schemas.py  state_saver.py  tools.py
etl/src/logic/: film_work_logic.py  genre_logic.py  person_logic.py
nginx/: nginx.conf  sites.conf
tests/functional/: Dockerfile  README.md  config.py  conftest.py  requirements-dev.txt  requirements.txt
tests/functional/mylib/: __init__.py  myassert.py
tests/functional/src/: test_auth.py  test_role.py
(+34 files in other folders)
